fix: adjust partnerName styling for better visibility on hover, refactor: moved home specific css to home.css

--- a/css/home.css
+++ b/css/home.css
@@ -52,19 +52,21 @@
 }
 
 .partnerName {
-  display: flex;
   position: relative;
-  white-space: nowrap;
   -webkit-overflow-scrolling: touch;
   opacity: 0;
   transition: all 0.2s ease-in-out;
   bottom: 0px;
+  margin: 0 auto;
+  font-size: 0.8rem;
+  padding: 0.1rem 0;
+  text-align: center;
 }
 
 .partnerLogo:hover {
   .partnerName {
     opacity: 1;
-    bottom: 1rem;
-    background-color: gray;
+    bottom: 1.1rem;
+    background-color: rgba(128, 128, 128, 0.407);
   }
 }
